#19 Add posibility to set threshold for performance page

--- a/jevidence-client/css/jevidence.css
+++ b/jevidence-client/css/jevidence.css
@@ -681,6 +681,10 @@ ul.task-list {
     margin-top: 5px;
 }
 
+.select2-results .select2-result-label {
+   padding: 1px;
+}
+
 .select2-revisions-dropdown {
    width: 250px !important;
 }
