Added legend settings to charts

--- a/jevidence-client/css/label.css
+++ b/jevidence-client/css/label.css
@@ -79,4 +79,6 @@
     color: #4e90cf;
     display: inline-block;
     font-family: 'Source Sans Pro', Arial;
+    margin-right: 2px;
+    margin-bottom: 2px;
 }
